--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -219,56 +219,56 @@ div.top25 { margin-top: 25em; }
 
 /* 改行天付き、折り返して(.+?)字下げ → class="top{$1} indent-{$1}" */
 /* ここから(.+?)字下げ、折り返して(.+?)字下げ → class="top{$2} indent{$1-$2}" */
-div.indent1 { text-indent: 1em each-line; }
-div.indent2 { text-indent: 2em each-line; }
-div.indent3 { text-indent: 3em each-line; }
-div.indent4 { text-indent: 4em each-line; }
-div.indent5 { text-indent: 5em each-line; }
-div.indent6 { text-indent: 6em each-line; }
-div.indent7 { text-indent: 7em each-line; }
-div.indent8 { text-indent: 8em each-line; }
-div.indent9 { text-indent: 9em each-line; }
-div.indent10 { text-indent: 10em each-line; }
-div.indent11 { text-indent: 11em each-line; }
-div.indent12 { text-indent: 12em each-line; }
-div.indent13 { text-indent: 13em each-line; }
-div.indent14 { text-indent: 14em each-line; }
-div.indent15 { text-indent: 15em each-line; }
-div.indent16 { text-indent: 16em each-line; }
-div.indent17 { text-indent: 17em each-line; }
-div.indent18 { text-indent: 18em each-line; }
-div.indent19 { text-indent: 19em each-line; }
-div.indent20 { text-indent: 20em each-line; }
-div.indent21 { text-indent: 21em each-line; }
-div.indent22 { text-indent: 22em each-line; }
-div.indent23 { text-indent: 23em each-line; }
-div.indent24 { text-indent: 24em each-line; }
-div.indent25 { text-indent: 25em each-line; }
-div.indent-1 { text-indent: -1em each-line; }
-div.indent-2 { text-indent: -2em each-line; }
-div.indent-3 { text-indent: -3em each-line; }
-div.indent-4 { text-indent: -4em each-line; }
-div.indent-5 { text-indent: -5em each-line; }
-div.indent-6 { text-indent: -6em each-line; }
-div.indent-7 { text-indent: -7em each-line; }
-div.indent-8 { text-indent: -8em each-line; }
-div.indent-9 { text-indent: -9em each-line; }
-div.indent-10 { text-indent: -10em each-line; }
-div.indent-11 { text-indent: -11em each-line; }
-div.indent-12 { text-indent: -12em each-line; }
-div.indent-13 { text-indent: -13em each-line; }
-div.indent-14 { text-indent: -14em each-line; }
-div.indent-15 { text-indent: -15em each-line; }
-div.indent-16 { text-indent: -16em each-line; }
-div.indent-17 { text-indent: -17em each-line; }
-div.indent-18 { text-indent: -18em each-line; }
-div.indent-19 { text-indent: -19em each-line; }
-div.indent-20 { text-indent: -20em each-line; }
-div.indent-21 { text-indent: -21em each-line; }
-div.indent-22 { text-indent: -22em each-line; }
-div.indent-23 { text-indent: -23em each-line; }
-div.indent-24 { text-indent: -24em each-line; }
-div.indent-25 { text-indent: -25em each-line; }
+div.indent1 { text-indent: 1em; }
+div.indent2 { text-indent: 2em; }
+div.indent3 { text-indent: 3em; }
+div.indent4 { text-indent: 4em; }
+div.indent5 { text-indent: 5em; }
+div.indent6 { text-indent: 6em; }
+div.indent7 { text-indent: 7em; }
+div.indent8 { text-indent: 8em; }
+div.indent9 { text-indent: 9em; }
+div.indent10 { text-indent: 10em; }
+div.indent11 { text-indent: 11em; }
+div.indent12 { text-indent: 12em; }
+div.indent13 { text-indent: 13em; }
+div.indent14 { text-indent: 14em; }
+div.indent15 { text-indent: 15em; }
+div.indent16 { text-indent: 16em; }
+div.indent17 { text-indent: 17em; }
+div.indent18 { text-indent: 18em; }
+div.indent19 { text-indent: 19em; }
+div.indent20 { text-indent: 20em; }
+div.indent21 { text-indent: 21em; }
+div.indent22 { text-indent: 22em; }
+div.indent23 { text-indent: 23em; }
+div.indent24 { text-indent: 24em; }
+div.indent25 { text-indent: 25em; }
+div.indent-1 { text-indent: -1em; }
+div.indent-2 { text-indent: -2em; }
+div.indent-3 { text-indent: -3em; }
+div.indent-4 { text-indent: -4em; }
+div.indent-5 { text-indent: -5em; }
+div.indent-6 { text-indent: -6em; }
+div.indent-7 { text-indent: -7em; }
+div.indent-8 { text-indent: -8em; }
+div.indent-9 { text-indent: -9em; }
+div.indent-10 { text-indent: -10em; }
+div.indent-11 { text-indent: -11em; }
+div.indent-12 { text-indent: -12em; }
+div.indent-13 { text-indent: -13em; }
+div.indent-14 { text-indent: -14em; }
+div.indent-15 { text-indent: -15em; }
+div.indent-16 { text-indent: -16em; }
+div.indent-17 { text-indent: -17em; }
+div.indent-18 { text-indent: -18em; }
+div.indent-19 { text-indent: -19em; }
+div.indent-20 { text-indent: -20em; }
+div.indent-21 { text-indent: -21em; }
+div.indent-22 { text-indent: -22em; }
+div.indent-23 { text-indent: -23em; }
+div.indent-24 { text-indent: -24em; }
+div.indent-25 { text-indent: -25em; }
 
 /* 地付き */
 div.bottom { text-align: end; margin-bottom: 0em; }
@@ -298,53 +298,53 @@ div.bottom23 { text-align: end; margin-bottom: 23em; }
 div.bottom24 { text-align: end; margin-bottom: 24em; }
 div.bottom25 { text-align: end; margin-bottom: 25em; }
 
-div.jizume1 { height: 1em; }
-div.jizume2 { height: 2em; }
-div.jizume3 { height: 3em; }
-div.jizume4 { height: 4em; }
-div.jizume5 { height: 5em; }
-div.jizume6 { height: 6em; }
-div.jizume7 { height: 7em; }
-div.jizume8 { height: 8em; }
-div.jizume9 { height: 9em; }
-div.jizume10 { height: 10em; }
-div.jizume11 { height: 11em; }
-div.jizume12 { height: 12em; }
-div.jizume13 { height: 13em; }
-div.jizume14 { height: 14em; }
-div.jizume15 { height: 15em; }
-div.jizume16 { height: 16em; }
-div.jizume17 { height: 17em; }
-div.jizume18 { height: 18em; }
-div.jizume19 { height: 19em; }
-div.jizume20 { height: 20em; }
-div.jizume21 { height: 21em; }
-div.jizume22 { height: 22em; }
-div.jizume23 { height: 23em; }
-div.jizume24 { height: 24em; }
-div.jizume25 { height: 25em; }
-div.jizume26 { height: 26em; }
-div.jizume27 { height: 27em; }
-div.jizume28 { height: 28em; }
-div.jizume29 { height: 29em; }
-div.jizume30 { height: 30em; }
-div.jizume31 { height: 31em; }
-div.jizume32 { height: 32em; }
-div.jizume33 { height: 33em; }
-div.jizume34 { height: 34em; }
-div.jizume35 { height: 35em; }
-div.jizume36 { height: 36em; }
-div.jizume37 { height: 37em; }
-div.jizume38 { height: 38em; }
-div.jizume39 { height: 39em; }
-div.jizume40 { height: 40em; }
-div.jizume41 { height: 41em; }
-div.jizume42 { height: 42em; }
-div.jizume43 { height: 43em; }
-div.jizume44 { height: 44em; }
-div.jizume45 { height: 45em; }
-div.jizume46 { height: 46em; }
-div.jizume47 { height: 47em; }
-div.jizume48 { height: 48em; }
-div.jizume49 { height: 49em; }
-div.jizume50 { height: 50em; }
+div.jizume1 { max-height: 1em; }
+div.jizume2 { max-height: 2em; }
+div.jizume3 { max-height: 3em; }
+div.jizume4 { max-height: 4em; }
+div.jizume5 { max-height: 5em; }
+div.jizume6 { max-height: 6em; }
+div.jizume7 { max-height: 7em; }
+div.jizume8 { max-height: 8em; }
+div.jizume9 { max-height: 9em; }
+div.jizume10 { max-height: 10em; }
+div.jizume11 { max-height: 11em; }
+div.jizume12 { max-height: 12em; }
+div.jizume13 { max-height: 13em; }
+div.jizume14 { max-height: 14em; }
+div.jizume15 { max-height: 15em; }
+div.jizume16 { max-height: 16em; }
+div.jizume17 { max-height: 17em; }
+div.jizume18 { max-height: 18em; }
+div.jizume19 { max-height: 19em; }
+div.jizume20 { max-height: 20em; }
+div.jizume21 { max-height: 21em; }
+div.jizume22 { max-height: 22em; }
+div.jizume23 { max-height: 23em; }
+div.jizume24 { max-height: 24em; }
+div.jizume25 { max-height: 25em; }
+div.jizume26 { max-height: 26em; }
+div.jizume27 { max-height: 27em; }
+div.jizume28 { max-height: 28em; }
+div.jizume29 { max-height: 29em; }
+div.jizume30 { max-height: 30em; }
+div.jizume31 { max-height: 31em; }
+div.jizume32 { max-height: 32em; }
+div.jizume33 { max-height: 33em; }
+div.jizume34 { max-height: 34em; }
+div.jizume35 { max-height: 35em; }
+div.jizume36 { max-height: 36em; }
+div.jizume37 { max-height: 37em; }
+div.jizume38 { max-height: 38em; }
+div.jizume39 { max-height: 39em; }
+div.jizume40 { max-height: 40em; }
+div.jizume41 { max-height: 41em; }
+div.jizume42 { max-height: 42em; }
+div.jizume43 { max-height: 43em; }
+div.jizume44 { max-height: 44em; }
+div.jizume45 { max-height: 45em; }
+div.jizume46 { max-height: 46em; }
+div.jizume47 { max-height: 47em; }
+div.jizume48 { max-height: 48em; }
+div.jizume49 { max-height: 49em; }
+div.jizume50 { max-height: 50em; }
