--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -169,6 +169,7 @@ span.font-2 { font-size: 80%; }
 span.font-3 { font-size: 70%; }
 span.font-4 { font-size: 60%; }
 span.font-5 { font-size: 50%; }
+span.kogaki { font-size: 50%; }
 
 /* 縦横中 */
 span.tcy {
