--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -5,6 +5,8 @@ html {
 	writing-mode: horizontal-tb;
 	-webkit-writing-mode: horizontal-tb;
 	-epub-writing-mode: horizontal-tb;
+	-epub-line-break: strict;
+	line-break: strict;	
 }
 
 body {
