--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -13,6 +13,9 @@
 #if (${bookInfo.Vertical})
 		<meta property="page-progression-direction">rtl</meta>
 #end
+#if (${bookInfo.InsertCoverPage})
+		<meta name="cover" content="img${coverImage.Id}"/>
+#end
 	</metadata>
 	<manifest>
 #if (${bookInfo.Vertical})
@@ -23,6 +26,9 @@
 		<item id="horizontal_image" href="css/horizontal_image.css" media-type="text/css"/>
 #end
 		<item id="nav" properties="nav" href="xhtml/nav.xhtml" media-type="application/xhtml+xml"/>
+#if (${bookInfo.InsertCoverPage})
+		<item id="cover-page" href="xhtml/cover.xhtml" media-type="application/xhtml+xml"/>
+#end
 #foreach(${sectionInfo} in ${sections})
 		<item id="sec${sectionInfo.SectionId}" href="xhtml/${sectionInfo.SectionId}.xhtml" media-type="application/xhtml+xml"/>
 #end
@@ -40,8 +46,16 @@
 #else
 	<spine page-progression-direction="ltr" toc="ncx">
 #end
+#if (${bookInfo.InsertCoverPage})
+		<itemref idref="cover-page" linear="no"/>
+#end
 #foreach(${sectionInfo} in ${sections})
 		<itemref idref="sec${sectionInfo.SectionId}" linear="yes"/>
 #end
 	</spine>
+#if (${bookInfo.InsertCoverPage})
+	<guide>
+		<reference type="cover" title="cover-page" href="xhtml/cover.xhtml"/>
+	</guide>
+#end
 </package>
