--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -11,6 +11,11 @@ html {
 	padding: 0;
 }
 
+@page {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	display: block;
 	margin: 0;
@@ -25,6 +30,10 @@ body.fit, body.cover {
 body.fit img {
 	max-width: 100%;
 	max-height: 100%;
+}
+body.fit.rmsdk img {
+	width: 100%;
+	height: auto;
 }
 
 /* 表紙画像は小さければ拡大 */
