--- a/template/OPS/toc.ncx.vm
+++ b/template/OPS/toc.ncx.vm
@@ -12,6 +12,7 @@
 <navMap>
 #set($idx=0)
 #foreach(${chapter} in ${chapters})
+#if ($chapter.ChapterName)
 #set($idx=$idx+1)
 	<navPoint id="toc${chapter.SectionId}" playOrder="${idx}">
 		<navLabel>
@@ -19,6 +20,7 @@
 		</navLabel>
 		<content src="xhtml/${chapter.SectionId}.xhtml"/>
 	</navPoint>
+#end
 #end
 </navMap>
 </ncx>
