--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -136,34 +136,29 @@ span.left_sesame {
 
 /* 傍線 */
 span.underline, span.double_underline, span.dotted_underline, span.dashed_underline, span.wave_underline {
-	text-decoration: underline;
-	-webkit-text-decoration: underline;
-	-epub-text-decoration: underline;
+	border-bottom-width: 1px;
+	padding-bottom: 1px;
 }
-span.left_underline {
-	text-decoration: overline;
-	-webkit-text-decoration: overline;
-	-epub-text-decoration: overline;
+span.underline {
+	border-bottom-style: solid
 }
 span.double_underline {
-	text-decoration-style: dobule;
-	-webkit-text-decoration-style: dobule;
-	-epub-text-decoration-style: dobule;
+	border-bottom-width: 3px;
+	border-bottom-style: double;
 }
 span.dotted_underline {
-	text-decoration-style: dotted;
-	-webkit-text-decoration-style: dotted;
-	-epub-text-decoration-style: dotted;
+	border-bottom-style: dotted;
 }
 span.dashed_underline {
-	text-decoration-style: dashed;
-	-webkit-text-decoration-style: dashed;
-	-epub-text-decoration-style: dashed;
+	border-bottom-style: dashed;
 }
 span.wave_underline {
-	text-decoration-style: wave;
-	-webkit-text-decoration-style: wave;
-	-epub-text-decoration-style: wave;
+	border-bottom-style: solid;/*wave;*/
+}
+span.left_underline {
+	border-top-style: solid;
+	padding-top: 1px;
+	border-top-width: 1px;
 }
 
 /* 文字サイズ 大 */
