--- a/template/OPS/toc.ncx.vm
+++ b/template/OPS/toc.ncx.vm
@@ -7,10 +7,19 @@
 <meta name="dtb:maxPageNumber" content="0"/>
 </head>
 <docTitle>
-	<text>${toc}</text>
+	<text>${bookInfo.Title}</text>
 </docTitle>
 <navMap>
 #set($idx=0)
+#if (${bookInfo.InsertCoverPage})
+#set($idx=$idx+1)
+	<navPoint id="toccover" playOrder="${idx}">
+		<navLabel>
+			<text>${cover_name}</text>
+		</navLabel>
+		<content src="xhtml/cover.xhtml"/>
+	</navPoint>
+#end
 #foreach(${chapter} in ${chapters})
 #if ($chapter.ChapterName)
 #set($idx=$idx+1)
