--- a/template/OPS/css/horizontal_image.css
+++ b/template/OPS/css/horizontal_image.css
@@ -1,7 +1,11 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/* 画像用スタイル */
+/* 画像用 */
+@page {
+	margin: 0;
+	padding: 0;
+}
 
 html {
 	writing-mode: horizontal-tb;
@@ -9,11 +13,8 @@ html {
 	-epub-writing-mode: horizontal-tb;
 	margin: 0;
 	padding: 0;
-}
-
-@page {
-	margin: 0;
-	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
 body {
