--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -1,7 +1,11 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/** 縦書き用スタイル */
+/** 縦書き用 */
+@page {
+	/* 上右下左 */
+	margin: 0.5em 0.5em 0 0;
+}
 
 html {
 	writing-mode: vertical-rl;
@@ -9,12 +13,10 @@ html {
 	-epub-writing-mode: vertical-rl;
 	-epub-line-break: strict;
 	line-break: strict;	
+	-epub-word-break: normal;
+	word-break: normal;
 	margin: 0;
 	padding: 0;
-}
-@page {
-	/* 上右下左 */
-	margin: 0.5em 0.5em 0 0;
 }
 body {
 	margin: 0;
@@ -24,9 +26,11 @@ body {
 	font-family: "@ＭＳ 明朝", "@MS Mincho", "ヒラギノ明朝 ProN W3", "HiraMinProN-W3", serif, sans-serif;
 	font-size: 1em;
 	line-height: 1.75;
+	vertical-align: baseline;
 }
 
 img {
+	max-width: 100%;
 	max-height: 100%;
 }
 
